<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TestJPGtoPDF</string>

    <string name="ID">아이디</string>
    <string name="PW">패스워드</string>

	<string name="title_main">메인 화면</string>
	<string name="title_login">로그인</string>
	<string name="title_list">전송 리스트</string>
	<string name="title_scan">촬영 대기 화면</string>
	<string name="title_preview">미리 보기 화면</string>
	<string name="title_add">리스트 추가</string>
	
	<string name="btn_view">조 회</string>
	<string name="btn_scan">스 캔</string>    
	<string name="btn_continue">스캔 계속</string>
	<string name="btn_stop">PDF 생성</string>  
	<string name="btn_preview">미리 보기</string>  
	<string name="btn_send">PDF 전송</string>  
			
	<string name="empty">저장된 주소가 없습니다.</string>
</resources>