<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
		<FrameLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1">
		    <TextView
		       android:id="@+id/main"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:layout_gravity="center"
		       android:textStyle="bold"
		       android:text="@string/title_preview" 
		       android:textAppearance="?android:attr/textAppearanceLarge" />		    
		</FrameLayout>	    		

		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="50dp"
		    android:layout_marginBottom="20dp"
		    android:gravity="center"
		    android:orientation="horizontal"
		    android:paddingTop="5dp" >

			<Button
			    android:id="@+id/button5"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginRight="30dp"
			    android:text="@string/btn_preview" />			<Button
			    android:id="@+id/button6"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="30dp"
			    android:text="@string/btn_send" />
		</LinearLayout>		 
</LinearLayout>