<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0">
			<TextView
				android:id="@+id/join_title"
				android:text="@string/title_list"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/title_blank"
				android:layout_gravity="top"
				android:gravity="center"
				android:textColor="@drawable/white"
				android:textSize="20sp"
				android:textStyle="bold"/>
		</LinearLayout>  
		<FrameLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1">
		    <ListView
		       android:id="@android:id/list"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"/>
		    <TextView
		       android:id="@android:id/empty"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:textColor="@color/solid_black"
		       android:textStyle="bold"
		       android:text="@string/empty" />		    
		</FrameLayout>	    
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="50dp"
		    android:layout_marginBottom="20dp"
		    android:gravity="center"
		    android:orientation="horizontal"
		    android:paddingTop="5dp" >
			<Button
			    android:id="@+id/button2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/btn_scan" />
		</LinearLayout>					 
</LinearLayout>